# Flappy

./: .gitignore  CMakeLists.txt  Makefile  README.md  flappy  game.hpp
src/: bird.cpp  bird.h  bird.hpp  constants.hpp  game.cpp  game.h  main.cpp  pipes.cpp  pipes.h  time.h
